assets/chat/css/style.scss
/* ... */
#chat-input-control::placeholder {
    color: $color-chat-place;
}
#chat-input-scaler {
    opacity: 0;
}

.chat-output {
    width: 100%;
    height: 100%;
}
.chat-lines {
    font-family: $chat-lines-font;
    font-size: $text-size-md;
    line-height: $chat-line-height;
    outline: 0 !important;

    /* Creates a space buffer between the chat messages and the bottom */
    &::after {
        content: '';
        display: block;
        width: 100%;
    }
}

.chat-tool-btn {
    font-size: 19px;
    cursor: pointer;
    width: 30px;
    height: 30px;
    line-height: 30px;
    display: inline-block;
    text-align: center;
    color: $color-chat-disabled;
    position: relative;
    text-decoration: none;
    border-radius:50%;
}
.chat-tool-btn.ping {
    animation: whisper-pulse 2s 1;
}
.chat-tool-btn:hover,
.chat-tool-btn.active {
    color: $color-chat-text2;
}

/* Code Tag */
.msg-chat code {
    font-style: normal;
    padding-right: 3px;
    padding-left: 3px;
    background-color: rgb(51, 51, 51);
    border-radius: 3px;
    color: $color-chat-text2;
    white-space: pre-wrap;
}

/* Base ChatMessage */
.msg-chat {
    clear: both;
    word-wrap: break-word;
    padding: 3px 12px 3px 7px;
    margin-top: 1px;
    color: $color-chat-text2;
    hr {
        margin: 8px 0;
    }
    .ctrl {
        font-weight: bold;
        margin-left: -7px;
        margin-right: 3px;
        color: $color-label-user;
        text-shadow: 1px 1px 0px black;
    }
    .ctrl-leading {
        font-weight: bold;
        margin-right: 3px;
        color: $color-label-user;
        text-shadow: 1px 1px 0px black;
    }
    .user {
        font-weight: 500;
        cursor: pointer;
    }
    .chat-user {
        cursor: pointer;
        position: relative;
        z-index: 120;
    }
    .chat-user:hover {
        text-decoration: underline;
    }
    .time {
        font-size: $text-size-sm;
        color: $color-chat-time;
        display: none; /* hidden by default */
    }
    .greentext {
        color: $color-green-text;
    }
    .spoiler {
        padding-left: 3px;
        padding-right: 3px;
        border-radius: 3px;
        border-width: 1px;
        border-style: solid;
        border-color: #000000;
        background:  $color-spoiler-hidden;
        color:  $color-spoiler-hidden;
        transition: all .2s ease-in-out;
        user-select: none;
        cursor: pointer;
        .chat-user {
            pointer-events: none;
        }
        .generify-container {
            .chat-emote {
                transition: all .2s;
                opacity: 0;
                transform: scale(0);
            }
        }
        .externallink,
        .externallink:visited {
            pointer-events: none;
            color: $color-spoiler-hidden;
        }
        .nsfw-link,
        .nsfl-link,
        .loud-link {
            border-bottom: 0px !important;
        }
        &.visible {
            user-select: auto;
            background: $color-spoiler-visible;
            color: $color-chat-text2;
            .chat-user {
                pointer-events: auto;
            }
            .generify-container {
                .chat-emote {
                    opacity: 1;
                    transform: scale(1);
                }
            }
            .externallink {
                pointer-events: auto;
                color: $color-link;
            }
            .externallink:visited {
                color: $color-link-visited;
            }
            .externallink:hover,
            .externallink:focus {
                color: $color-link-hover;
            }
            .nsfw-link {
                border-bottom: 1px dashed $color-underline-nsfw !important;
            }
            .nsfl-link {
                border-bottom: 1px dashed $color-underline-nsfl !important;
            }
            .loud-link {
                border-bottom: 1px dashed $color-underline-loud !important;
            }
        }
    }
    .externallink,
    .nsfw-link {
        border-style: solid;
        border-color: transparent;
        border-width: 1px 0 1px 0;
    }
    .externallink {
        color: $color-link;
        position: relative;
        z-index: 120;
    }
    .externallink:visited {
        color: $color-link-visited;
    }
    .externallink:hover,
    .externallink:focus {
        color: $color-link-hover;
    }
    .nsfw-link {
        border-bottom: 1px dashed $color-underline-nsfw !important;;
    }
    .nsfl-link {
        border-bottom: 1px dashed $color-underline-nsfl !important;
    }
    .loud-link {
        border-bottom: 1px dashed $color-underline-loud !important;
    }
    &.msg-continue {
        margin-top: 1px;
        margin-bottom: 3px;
        padding-top: 0;

        &.msg-me {
            padding-top: 2px;
            margin-top: 3px;
        }

        .msg-highlight + &,
        .msg-tagged + &.msg-tagged {
            margin-top: -4px;
            padding-top: 1px;
            border-top: none;

            &.msg-me {
                padding-top: 4px;
            }
        }
    }
    .features {
        vertical-align: top;
        height: 16px;
        .flair {
            display: inline-block;
            margin: 0;
            opacity: 1;
            vertical-align: sub;
        }
    }
}
.msg-chat:first-child {
    margin-top: 0.5em;
}
.msg-chat:last-child {
    margin-bottom: 0.5em;
}

/* disable animations for emotes that have likely scrolled off-screen to save CPU-time. */
.msg-chat:nth-last-child(n+50) {
    /* container is added to all emotes */
    .generify-container {
        .chat-emote {
            animation: none;
        }
    }
}
/* ... */

